[package]
name = "attention-challenge"
version = "0.1.0"
edition = "2021"
description = "Attention Challenge Meditation App"
repository = "https://github.com/uvizhe/attention-challenge"
license = "GPL-3.0"
authors = ["Alexander Uvizhev"]

[workspace]
members = ["src-tauri"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
gloo-console = "0.3.0"
gloo-events = "0.1.2"
gloo-timers = "0.2.6"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.59", features = ["HtmlDivElement", "Navigator", "ScrollIntoViewOptions",
    "ScrollLogicalPosition"] }
yew = { version="0.20", features=["csr"] }
