[package]
name = "attention-challenge"
version = "0.1.0"
edition = "2021"
description = "Attention Challenge Meditation App"
repository = "https://github.com/uvizhe/attention-challenge"
license = "GPL-3.0"
authors = ["Alexander Uvizhev"]

[workspace]
members = ["src-tauri"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
gloo-console = "0.3"
gloo-events = "0.1"
gloo-timers = "0.2"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
yew = { version="0.20", features=["csr"] }
yew-router = "0.17.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlDivElement",
    "HtmlMediaElement",
    "Navigator",
    "ScrollIntoViewOptions",
    "ScrollLogicalPosition",
    "Window",
]
