[package]
name = "attention-challenge-tauri"
description = "Attention Challenge Meditation App"
default-run = "attention-challenge-tauri"
authors = ["Alexander Uvizhev"]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/uvizhe/attention-challenge"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = [] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
